--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="html checkpoint portfolio website/styles.css">  
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap portfolio website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  </head>
+</head>
   <body>
     <audio controls autoplay>
         <source src="https://youtu.be/ZrhffedJqAY" type="video/wav">
@@ -20,7 +22,7 @@
         
         Yasmine Perkins
     </h1>
-    <p>My name is Yasmine, I am studying to become a Wed Developer, and this is my first attempt to understand how to build my own website.</p>
+    <p>My name is Yasmine, I am studying to become a Web Developer, and this is my first attempt to understand how to build my own website.</p>
 
     <img src="images/IMG-0489.JPG" alt="Me" class="center" width="150" height="170">
 
